# Django-Project

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
authorization/: settings.py  urls.py
coursePlatformBack/: .env
coursePlatformBack/Python-3.11.5/: Makefile  Makefile.pre  config.status  pyconfig.h
coursePlatformBack/Python-3.11.5/Modules/: _abc.gcda  _codecsmodule.gcda  _collectionsmodule.gcda  _functoolsmodule.gcda  _localemodule.gcda  _operator.gcda  _stat.gcda  _threadmodule.gcda  _tracemalloc.gcda  _weakref.gcda  atexitmodule.gcda  errnomodule.gcda  faulthandler.gcda  gcmodule.gcda  getbuildinfo.gcda  getpath.gcda  getpath_noop.gcda  itertoolsmodule.gcda  ld_so_aix  main.gcda  posixmodule.gcda  pwdmodule.gcda  signalmodule.gcda  symtablemodule.gcda  timemodule.gcda  xxsubtype.gcda
coursePlatformBack/Python-3.11.5/Objects/: abstract.gcda  accu.gcda  boolobject.gcda  bytearrayobject.gcda  bytes_methods.gcda  bytesobject.gcda  call.gcda  capsule.gcda  cellobject.gcda  classobject.gcda  codeobject.gcda  complexobject.gcda  descrobject.gcda  dictobject.gcda  enumobject.gcda  exceptions.gcda  fileobject.gcda  floatobject.gcda  frameobject.gcda  funcobject.gcda  genericaliasobject.gcda  genobject.gcda  interpreteridobject.gcda  iterobject.gcda  listobject.gcda  longobject.gcda  memoryobject.gcda  methodobject.gcda  moduleobject.gcda  namespaceobject.gcda  (+14 more)
coursePlatformBack/course_platform_back/: db.sqlite3  manage.py
coursePlatformFront/course_platform_front/: db.sqlite3  db.sqlite3.bak  manage.py
myvenv/: pyvenv.cfg
users/: urls.py  views.py
(+205 files in other folders)
